[package]
name = "switchit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "switchit"

[target.x86_64-unknown-linux-gnu.dependencies]
fork = "0.1.19"

[dependencies]
eframe = "0.18.0"
image = "0.24.2"
